Fix vertical align cards

--- a/mviewer/maddog/addons/maddog/css/template.css
+++ b/mviewer/maddog/addons/maddog/css/template.css
@@ -37,9 +37,7 @@
 	font-size: 12px!important;
 }
 
-.align-right {
-	text-align: right;
-}
+
 
 .color1 {
 	color: var(--mycolor);
@@ -217,6 +215,10 @@ h4.submodal-title {
 */
 
 /* Menu des types de suivi */
+.row-for-cards {
+	display: flex;
+	flex-wrap: wrap;
+}
 
 .icon-suivi {
 	width: 60px;
@@ -233,8 +235,9 @@ h4.submodal-title {
 
 #selectWPS .card {
     background-color: whitesmoke;
-    padding: 30px 20px;
+    padding: 40px 20px;
     border-radius: 5px;
+	height: 100%;
 }
 
 #selectWPS .card:hover {
@@ -258,6 +261,12 @@ p.card-text {
     border-radius: 3px;padding: 7px;
 }
 
+.align-right-link {
+	text-align: right;
+    position: absolute;
+    bottom: 25px;
+    right: 40px;
+}
 
 .toolbarMenu {
 	background-color: transparent;
